<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background"
    android:gravity="center">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/icon_logo" />

    <LinearLayout
        android:padding="5dp"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <Button
            android:id="@+id/btnTabDangNhap"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/btn_dang_nhap"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnTabDangKi"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/btn_dang_ki"
            android:layout_marginStart="-40dp"
            android:backgroundTint="@color/green"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_email_pass">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_user"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/edtEmailOrSĐT"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:hint="@string/hint_email_sdt"
            android:paddingStart="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_email_pass">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_password"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:hint="@string/hint_password"
            android:paddingStart="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_email_pass">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_password"
            android:layout_marginStart="30dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/edtNhapLaiMatKhau"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:hint="@string/hint_password_again"
            android:paddingStart="50dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDangKi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dang_ki"
        android:textColor="@color/white"
        android:background="@drawable/bg_item_login"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textStyle="bold"/>

</LinearLayout>