<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity"
    android:orientation="vertical"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/green"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:background="@drawable/icon_back"
                android:layout_marginStart="24dp" />

            <TextView
                android:id="@+id/txtHeaderGioHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_gio_hang"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_marginEnd="24dp"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvItemGioHang"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_margin="24dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tong_cong"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtGiaTongItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/hint_gia_tong_cong" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_margin="24dp"/>


        <Button
            android:id="@+id/btnMuaHang"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:background="@drawable/background_btn"
            android:text="@string/btn_mua_hang"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

</ScrollView>