<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical"
    android:background="@color/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_back"
            android:layout_marginStart="24dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginEnd="24dp">
            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_search"
                android:layout_weight="1"

                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_weight="2"
                android:gravity="center_vertical"
                android:hint="@string/search"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="20dp"
                android:layout_gravity="center"

                android:layout_weight="1"
                android:src="@drawable/icon_cancel" />


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tim_gan_day"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xoa_tat_ca"
            android:gravity="end"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/container_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_lao_hac"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                />
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/icon_delete_seach"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/container_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_harry_potter"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                />
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/icon_delete_seach"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/container_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nha_gia_kim"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                />
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/icon_delete_seach"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:text="Được tìm kiếm nhiều nhất"
        android:textSize="14sp"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/gvBookItem"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:numColumns="2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tác giả được tìm nhiều nhất"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvTacGia"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"/>



</LinearLayout>